--- a/WaitForPort/WaitForPort.csproj
+++ b/WaitForPort/WaitForPort.csproj
@@ -10,7 +10,7 @@
         <Description>Wait for Ports to be available using .NET</Description>
         <Copyright>Alexander Zeitler</Copyright>
         <PackageProjectUrl>https://github.com/PDMLab/WaitForPort.NET</PackageProjectUrl>
-        <PackageLicense>https://github.com/PDMLab/WaitForPort.NET/blob/main/LICENSE</PackageLicense>
+        <PackageLicenseUrl>https://github.com/PDMLab/WaitForPort.NET/blob/main/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/PDMLab/WaitForPort.NET</RepositoryUrl>
         <AssemblyVersion>0.1.0</AssemblyVersion>
         <FileVersion>0.1.0</FileVersion>
