fix: copy readme on build

--- a/WaitForPort/WaitForPort.csproj
+++ b/WaitForPort/WaitForPort.csproj
@@ -21,5 +21,12 @@
     <PropertyGroup>
         <Version>0.1.0</Version>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Remove="README.md" />
+      <Content Include="README.md">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
     
 </Project>
