--- a/WaitForPort/WaitForPort.csproj
+++ b/WaitForPort/WaitForPort.csproj
@@ -23,10 +23,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="README.md" />
-      <Content Include="README.md">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+      <None Include="README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
     
 </Project>
