--- a/WaitForPort/WaitForPort.csproj
+++ b/WaitForPort/WaitForPort.csproj
@@ -4,7 +4,6 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageVersion>0.1.1</PackageVersion>
         <Title>WaitForPort</Title>
         <Authors>Alexander Zeitler</Authors>
         <Description>Wait for Ports to be available using .NET</Description>
@@ -12,8 +11,6 @@
         <PackageProjectUrl>https://github.com/PDMLab/WaitForPort.NET</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/PDMLab/WaitForPort.NET/blob/main/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/PDMLab/WaitForPort.NET</RepositoryUrl>
-        <AssemblyVersion>0.1.1</AssemblyVersion>
-        <FileVersion>0.1.1</FileVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
@@ -23,7 +20,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Include="README.md" Pack="true" PackagePath="\" />
+        <None Include="..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
     </ItemGroup>
-    
+
 </Project>
